# desktop_translate

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_deb.sh  build_debug.sh
include/: ClipboardManager.h  Config.h  GlobalShortcut.h  HoverTranslateWindow.h  MainWindow.h  ModelServiceManager.h  OCRService.h  SelectionOverlay.h  TestWindow.h  TranslationResultWindow.h  TranslationService.h
models/: models_in_this_dir.md  models_in_this_dir.txt
src/: ClipboardManager.cpp  Config.cpp  GlobalShortcut.cpp  HoverTranslateWindow.cpp  MainWindow.cpp  ModelServiceManager.cpp  OCRService.cpp  SelectionOverlay.cpp  TestWindow.cpp  TranslationResultWindow.cpp  TranslationService.cpp  main.cpp
